--- a/templates/dadishu.html
+++ b/templates/dadishu.html
@@ -44,7 +44,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg  navigation">
-					<a class="navbar-brand" href="index">
+					<a class="navbar-brand" href="index?user_id={{user_id}}">
 						<img src="templates/images/logo.png" alt="">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +53,10 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
 							<li class="nav-item active">
-								<a class="nav-link" href="index">主页</a>
+								<a class="nav-link" href="index?user_id={{user_id}}">主页</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="zhuye">个人界面</a>
+								<a class="nav-link" href="zhuye?user_id={{user_id}}">个人界面</a>
 							</li>
 							<li class="nav-item dropdown dropdown-slide">
 								<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -64,9 +64,9 @@
 								</a>
 								<!-- Dropdown list -->
 								<div class="dropdown-menu dropdown-menu-right">
-									<a class="dropdown-item" href="wuzi">五子棋</a>
-									<a class="dropdown-item" href="dadishu">打地鼠</a>
-									<a class="dropdown-item" href="dafeiji">打飞机</a>
+									<a class="dropdown-item" href="wuzi?user_id={{user_id}}">五子棋</a>
+									<a class="dropdown-item" href="dadishu?user_id={{user_id}}">打地鼠</a>
+									<a class="dropdown-item" href="dafeiji?user_id={{user_id}}">打飞机</a>
 								</div>
 							</li>
 						</ul>
@@ -119,7 +119,7 @@
 					<!--登陆按钮-->
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">登录</button>
+						<button type="submit" class="btn btn-default" id="login_button">登录</button>
 						</div>
 					</div>
 				</form>
@@ -195,11 +195,11 @@
 					<div class="widget category-list">
 	<h4 class="widget-header">热门的游戏</h4>
 	<ul class="category-list">
-		<li><a href="wuzi">五子棋
+		<li><a href="wuzi?user_id={{user_id}}">五子棋
 		 <span>93</span></a></li>
-		<li><a href="dadishu">打地鼠 <span>233</span></a></li>
-		<li><a href="dafeiji">打飞机  <span>183</span></a></li>
-		<li><a href="dafeiji">聊天室 <span>343</span></a></li>
+		<li><a href="dadishu?user_id={{user_id}}">打地鼠 <span>233</span></a></li>
+		<li><a href="dafeiji?user_id={{user_id}}">打飞机  <span>183</span></a></li>
+		<li><a href="dafeiji?user_id={{user_id}}">聊天室 <span>343</span></a></li>
 	</ul>
 </div>
 
@@ -650,7 +650,11 @@
   <script src="templates/plugins/smoothscroll/SmoothScroll.min.js"></script>
   
   <script src="templates/js/scripts.js"></script>
-
+<script type="text/javascript">
+$("#login_button").click(function(){
+	window.location.href='dadishu?user_id='+$("#login-username").val();
+});
+</script>
 </body>
 
 </html>
